# cs599-project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
src/: __init__.py  main.py
src/agent/: graph.py  nodes.py  state.py
src/config/: prompts.py  settings.py
src/memory/: __init__.py  memory_manager.py
src/review/: __init__.py  reporter.py  reviewer.py  rules.py
src/tools/: file_reader.py  git_parser.py  static_analyzer.py
